fix the pending issues

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
         >Contact DXpress</span
       >
       <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">
-        Get in Touch
+        Contact Our Team
       </h1>
     </div>
   </div>
