--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -19,7 +19,7 @@
         <h5>Contact Us</h5>
         <ul class="list-unstyled">
           <li><i class="fas fa-phone"></i> +1 234 567 890</li>
-          <li><i class="fas fa-envelope"></i> support@dxpress.com</li>
+          <li><i class="fas fa-envelope"></i> support@dxpress.uk</li>
           <li><i class="fas fa-map-marker-alt"></i> 123 Shipping St, City, Country</li>
         </ul>
       </div>
