--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -149,7 +149,8 @@
               <p
                 class="position-relative text-neutral-500 fw-semibold cursor-small"
               >
-                55 Main Street, 2nd block Malborne, Australia
+                59 Irthlingborough Road East<br />Wellingborough<br />Northamptonshire<br />NN8
+                1GP
               </p>
             </div>
             <div class="">
@@ -179,7 +180,7 @@
           class="d-flex align-items-center justify-content-between tw-gap-6 flex-wrap"
         >
           <div class="mb-0">
-            <a href="index.html" class="cursor-big">
+            <a href="/" class="cursor-big">
               <img src="assets/images/logo/logo3.png" alt="" width="200" />
             </a>
           </div>
