--- a/views/project/index.ejs
+++ b/views/project/index.ejs
@@ -9,7 +9,9 @@
         class="splitTextStyleTwo text-main-600 border-bottom border-main-600 fst-italic fw-bold tw-text-lg cursor-small"
         >Our Projects</span
       >
-      <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">Successful Deliveries</h1>
+      <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">
+        Successful Deliveries
+      </h1>
     </div>
   </div>
 </section>
@@ -195,9 +197,10 @@
 <!-- ========================== map Start ============================ -->
 <div class="map">
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5591642.125572935!2d-118.45027922609367!3d46.81821123121407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5343f19fafa367dd%3A0xe0a08a08122c4da1!2sHelena-Lewis%20and%20Clark%20National%20Forest!5e0!3m2!1sen!2sbd!4v1731480188813!5m2!1sen!2sbd"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2446.7127073290347!2d-0.6761891237499595!3d52.17859337189377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4877b1eb5a6b2667%3A0x5c5e8a6c1c7e41d9!2s59%20Irthlingborough%20Rd%20E%2C%20Wellingborough%20NN8%201GP%2C%20UK!5e0!3m2!1sen!2s!4v1701234567890!5m2!1sen!2s"
     class="w-100"
     height="355"
+    style="border: 0"
     allowfullscreen=""
     loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"
