--- a/views/shipment/track.ejs
+++ b/views/shipment/track.ejs
@@ -36,6 +36,7 @@
                   alt="Track Shipment"
                   class="img-fluid"
                   onerror="this.src='/assets/images/thumbs/package-tracking.png'; this.onerror=null;"
+                  style="width: 300px;"
                 />
                 <h3 class="fw-bold mt-4 tw-mb-3">Real-Time Tracking</h3>
                 <p class="text-muted">
@@ -186,3 +187,7 @@
     }
   }
 </style>
+
+<script>
+  document.body.style.backgroundColor = "hsl(197, 89%, 10%)";
+</script>
