--- a/views/500.ejs
+++ b/views/500.ejs
@@ -5,7 +5,7 @@
       <div class="col-md-8 text-center">
         <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
           <img
-            src="/assets/images/thumbs/500.png"
+            src="/assets/images/thumbs/500.gif"
             alt="500 Error"
             class="img-fluid mb-5"
             style="max-height: 300px"
