--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -44,6 +44,9 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/about">About Us</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/services">Services</a>
             </li>
             <li class="nav-item">
