--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -11,7 +11,7 @@
 
   <div class="mobile-menu__inner">
     <a href="/" class="mobile-menu__logo">
-      <img src="/assets/images/logo/logo2.png" alt="Logo" />
+      <img src="/assets/images/logo/logo5.png" alt="Logo" />
     </a>
     <div class="mobile-menu__menu">
       <!-- Nav menu Start -->
@@ -23,6 +23,20 @@
             href="/"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
             >Home</a
+          >
+        </li>
+        <li class="nav-menu__item">
+          <a
+            href="/about"
+            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+            >About Us</a
+          >
+        </li>
+        <li class="nav-menu__item position-relative activePage">
+          <a
+            href="/services"
+            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+            >Services</a
           >
         </li>
         <li class="nav-menu__item position-relative activePage">
@@ -39,25 +53,11 @@
             >Team</a
           >
         </li>
-        <li class="nav-menu__item position-relative activePage">
-          <a
-            href="/services"
-            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Services</a
-          >
-        </li>
         <li class="nav-menu__item position-relative">
           <a
             href="/create-shipment"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
             >Create Shipment</a
-          >
-        </li>
-        <li class="nav-menu__item">
-          <a
-            href="/about"
-            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100"
-            >About</a
           >
         </li>
         <li class="nav-menu__item position-relative">
@@ -114,9 +114,9 @@
             ><i class="ph-bold ph-envelope"></i
           ></span>
           <a
-            href="mailto:contact@dxpress.uk"
+            href="mailto:support@dxpress.uk"
             class="text-black xl-tw-text-sm tw-text-xs fw-medium hover--translate-x-05 hover-text-main-600 tw-transition-all"
-            >contact@dxpress.uk</a
+            >support@dxpress.uk</a
           >
         </div>
         <div
@@ -149,14 +149,14 @@
               src="/assets/images/logo/logo.png"
               alt="Logo"
               class="max-w-200-px"
-              style="width: 135px;"
+              style="width: 135px"
             />
           </a>
         </div>
         <div class="position-relative d-lg-none d-inline-block z-1">
           <a href="/" class="cursor-big">
             <img
-              src="/assets/images/logo/logo2.png"
+              src="/assets/images/logo/logo5.png"
               alt="Logo"
               class="max-w-100-px"
             />
@@ -177,14 +177,28 @@
                 >Home</a
               >
             </li>
-            <li class="nav-menu__item position-relative">
+            <li class="nav-menu__item">
+              <a
+                href="/about"
+                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-menu__item position-relative activePage">
+              <a
+                href="/services"
+                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+                >Services</a
+              >
+            </li>
+            <li class="nav-menu__item position-relative activePage">
               <a
                 href="/project"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
                 >Projects</a
               >
             </li>
-            <li class="nav-menu__item position-relative">
+            <li class="nav-menu__item position-relative activePage">
               <a
                 href="/team"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
@@ -193,23 +207,9 @@
             </li>
             <li class="nav-menu__item position-relative">
               <a
-                href="/services"
-                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >Services</a
-              >
-            </li>
-            <li class="nav-menu__item position-relative">
-              <a
                 href="/create-shipment"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
                 >Create Shipment</a
-              >
-            </li>
-            <li class="nav-menu__item">
-              <a
-                href="/about"
-                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100"
-                >About</a
               >
             </li>
             <li class="nav-menu__item position-relative">
