updated the website still

--- a/views/admin/forgot-password.ejs
+++ b/views/admin/forgot-password.ejs
@@ -163,7 +163,7 @@
               class="form-control"
               id="email"
               name="email"
-              value="admin@dxpress.uk"
+              value="support@dxpress.uk"
               readonly
               required
             />
