--- a/views/layouts/nav-home.ejs
+++ b/views/layouts/nav-home.ejs
@@ -173,8 +173,7 @@
             <div class="">
               <span class="d-block fw-bold text-white">Opening Hours</span>
               <span class="d-block fw-normal text-white"
-                >Mon to Fri 09:00-18:00 | Sat
-                09:00-14:00</span
+                >Mon to Fri 09:00-18:00 | Sat 09:00-14:00</span
               >
             </div>
           </div>
