--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -93,44 +93,58 @@
           <ul class="d-flex flex-column tw-gap-6">
             <li>
               <a
-                href="javascript:void(0)"
+                href="/contact"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
                 >Request A Freight</a
               >
             </li>
             <li>
               <a
-                href="javascript:void(0)"
+                href="/services"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
-                >Our Services</a
+                >Air Freight</a
               >
             </li>
             <li>
               <a
-                href="javascript:void(0)"
+                href="/services"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
-                >What We Do</a
+                >Sea Freight</a
               >
             </li>
             <li>
               <a
-                href="javascript:void(0)"
+                href="/services"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
-                >Abandonment Cart</a
+                >Road Freight</a
               >
             </li>
             <li>
               <a
-                href="javascript:void(0)"
+                href="/services"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
-                >Shipments</a
+                >Warehousing</a
               >
             </li>
             <li>
               <a
-                href="javascript:void(0)"
+                href="/services"
+                target="_blank"
                 class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
-                >Pricing Flexibility</a
+                >Custom Clearance</a
+              >
+            </li>
+            <li>
+              <a
+                href="/services"
+                target="_blank"
+                class="hover-arrow cursor-small position-relative text-neutral-500 hover-text-main-600 fw-semibold"
+                >Supply Chain Solutions</a
               >
             </li>
           </ul>
@@ -193,6 +207,11 @@
               href="javascript:void(0)"
               class="fw-semibold text-neutral-500 hover-text-white hover-underline cursor-small hover--translate-y-1"
               >Company</a
+            >
+            <a
+              href="/franchise"
+              class="fw-semibold text-neutral-500 hover-text-white hover-underline cursor-small hover--translate-y-1"
+              >Franchise Opportunities</a
             >
             <a
               href="javascript:void(0)"
