fixed issue with project pages details not found

--- a/views/project/index.ejs
+++ b/views/project/index.ejs
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="masonry-layout d-flex flex-wrap gap-4">
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img1.png"
             class="w-100 h-100 object-fit-cover"
@@ -41,7 +41,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >Ocean Freight Services</a
             >
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img2.png"
             class="w-100 h-100 object-fit-cover"
@@ -69,7 +69,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >International Air Freight</a
             >
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img3.png"
             class="w-100 h-100 object-fit-cover"
@@ -97,7 +97,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >Warehousing Solutions</a
             >
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img4.png"
             class="w-100 h-100 object-fit-cover"
@@ -125,7 +125,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >Ground Transportation</a
             >
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img5.png"
             class="w-100 h-100 object-fit-cover"
@@ -153,7 +153,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >Express Courier Service</a
             >
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="project-details.html" class="w-100 h-100">
+        <a href="#" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img6.png"
             class="w-100 h-100 object-fit-cover"
@@ -181,7 +181,7 @@
         >
           <h4 class="text-white tw-mb-4">
             <a
-              href="project-details.html"
+              href="#"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
               >Custom Logistics Solutions</a
             >
