--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -13,6 +13,7 @@
 
     <!-- Assets -->
     <link rel="shortcut icon" href="/assets/images/logo/favicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <%- include('../partials/head') %>
   </head>
   <body>
