--- a/views/layouts/nav-home.ejs
+++ b/views/layouts/nav-home.ejs
@@ -41,16 +41,16 @@
         </li>
         <li class="nav-menu__item position-relative">
           <a
-            href="/project"
+            href="/ecommerce-integration"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Projects</a
+            >E-Store Integration</a
           >
         </li>
         <li class="nav-menu__item position-relative">
           <a
-            href="/team"
+            href="/create-shipment"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Team</a
+            >Create Shipment</a
           >
         </li>
         <li class="nav-menu__item position-relative">
@@ -84,77 +84,6 @@
 <main
   class="absolute-headers position-absolute top-0 tw-start-0 tw-end-0 w-100 tw-z-99 header"
 >
-  <!-- ============================= Top header Two start ================================= -->
-  <div class="top-header-two">
-    <div class="tw-container-1540-px mx-auto tw-px-4">
-      <div
-        class="d-flex justify-content-between tw-py-205 bg-main-600 tw-px-54-px"
-      >
-        <div class="d-lg-flex align-items-center tw-gap-6 d-none">
-          <div class="cursor-small d-flex align-items-center tw-gap-2">
-            <span class="text-white d-flex"
-              ><i class="ph-bold ph-map-pin"></i
-            ></span>
-            <span class="text-white xl-tw-text-sm tw-text-xs fw-medium"
-              >59 Irthlingborough Road East, Wellingborough, Northamptonshire,
-              NN8 1GP</span
-            >
-          </div>
-          <div class="cursor-small d-flex align-items-center tw-gap-2">
-            <span class="text-white d-flex"
-              ><i class="ph-bold ph-phone"></i
-            ></span>
-            <a
-              href="tel:+447506323070"
-              class="text-white xl-tw-text-sm tw-text-xs fw-medium hover--translate-x-05 tw-transition-all"
-              >+44 7506 323070</a
-            >
-          </div>
-        </div>
-
-        <div
-          class="d-flex align-items-center justify-content-lg-end flex-wrap justify-content-between tw-gap-8 flex-grow-1"
-        >
-          <div class="xs-d-block d-none">
-            <!-- Social Media Start -->
-            <ul class="d-flex align-items-center tw-gap-5">
-              <li>
-                <a
-                  href="https://wwww.twitter.com"
-                  class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
-                  ><i class="ph-fill ph-twitter-logo"></i
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://wwww.facebook.com"
-                  class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
-                  ><i class="ph-fill ph-facebook-logo"></i
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://wwww.instagram.com"
-                  class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
-                  ><i class="ph-bold ph-instagram-logo"></i
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://wwww.youtube.com"
-                  class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
-                  ><i class="ph-fill ph-youtube-logo"></i
-                ></a>
-              </li>
-            </ul>
-            <!-- Social Media End -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- ============================= Top header Two End ================================= -->
-
   <!-- =================================== Header Middle Start ======================== -->
   <div class="header-middle">
     <div class="tw-container-1540-px mx-auto tw-px-4">
@@ -166,17 +95,6 @@
         </a>
 
         <div class="d-xl-flex d-none align-items-center tw-gap-64-px">
-          <div class="d-flex align-items-center tw-gap-5 cursor-small">
-            <span class="">
-              <img src="assets/images/icons/watch.svg" alt="" />
-            </span>
-            <div class="">
-              <span class="d-block fw-bold text-white">Opening Hours</span>
-              <span class="d-block fw-normal text-white"
-                >Mon to Fri 09:00-18:00 | Sat 09:00-14:00</span
-              >
-            </div>
-          </div>
           <div class="d-flex align-items-center tw-gap-5 cursor-small">
             <span class="">
               <img src="assets/images/icons/envelop.svg" alt="" />
@@ -257,16 +175,9 @@
             </li>
             <li class="nav-menu__item position-relative">
               <a
-                href="/project"
+                href="/ecommerce-integration"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >Project</a
-              >
-            </li>
-            <li class="nav-menu__item position-relative">
-              <a
-                href="/team"
-                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >Team</a
+                >E-Store Integration</a
               >
             </li>
             <li class="nav-menu__item position-relative">
@@ -278,9 +189,9 @@
             </li>
             <li class="nav-menu__item position-relative">
               <a
-                href="/blog"
+                href="/dxpress-journal"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >News</a
+                >Our Journal</a
               >
             </li>
             <li class="nav-menu__item">
