--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -41,16 +41,9 @@
         </li>
         <li class="nav-menu__item position-relative activePage">
           <a
-            href="/project"
+            href="/ecommerce-integration"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Projects</a
-          >
-        </li>
-        <li class="nav-menu__item position-relative activePage">
-          <a
-            href="/team"
-            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Team</a
+            >E-Store Integration</a
           >
         </li>
         <li class="nav-menu__item position-relative">
@@ -62,9 +55,9 @@
         </li>
         <li class="nav-menu__item position-relative">
           <a
-            href="/blog"
+            href="/dxpress-journal"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >News</a
+            >Our Journal</a
           >
         </li>
         <li class="nav-menu__item">
@@ -80,60 +73,6 @@
   </div>
 </div>
 <!-- ==================== Mobile Menu End Here ==================== -->
-
-<!-- ============================ Header Top Start ==================================== -->
-<div
-  class="bg-neutral-50 position-relative z-1 d-sm-block d-none header-top-bg"
->
-  <div class="container tw-container-1554-px">
-    <div class="d-flex align-items-center justify-content-between tw-gap-6">
-      <div class="d-flex align-items-center tw-gap-6">
-        <div class="cursor-small d-flex align-items-center tw-gap-2 tw-py-205">
-          <span class="text-main-600 d-flex"
-            ><i class="ph-bold ph-map-pin"></i
-          ></span>
-          <span class="text-black xl-tw-text-sm tw-text-xs fw-medium"
-            >59 Irthlingborough Road East Wellingborough Northamptonshire NN8
-            1GP</span
-          >
-        </div>
-        <div class="cursor-small d-flex align-items-center tw-gap-2 tw-py-205">
-          <span class="text-main-600 d-flex"
-            ><i class="ph-bold ph-phone"></i
-          ></span>
-          <a
-            href="mailto:support@dxpress.uk"
-            class="text-black xl-tw-text-sm tw-text-xs fw-medium hover--translate-x-05 hover-text-main-600 tw-transition-all"
-            >support@dxpress.uk</a
-          >
-        </div>
-      </div>
-      <div class="d-md-flex d-none align-items-center tw-gap-6">
-        <div class="cursor-small d-flex align-items-center tw-gap-2 tw-py-205">
-          <span class="text-main-600 d-flex"
-            ><i class="ph-bold ph-envelope"></i
-          ></span>
-          <a
-            href="mailto:support@dxpress.uk"
-            class="text-black xl-tw-text-sm tw-text-xs fw-medium hover--translate-x-05 hover-text-main-600 tw-transition-all"
-            >support@dxpress.uk</a
-          >
-        </div>
-        <div
-          class="cursor-small d-lg-flex d-none align-items-center tw-py-205 tw-gap-6 tw-ps-10 clip-path position-relative"
-        >
-          <span class="text-white d-flex"
-            ><i class="ph-bold ph-map-trifold"></i
-          ></span>
-          <span class="text-white xl-tw-text-sm tw-text-xs fw-medium"
-            >Northamptonshire NN8 1GP
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ============================ Header Top End ==================================== -->
 
 <!-- ==================== Header Start Here ==================== -->
 <header class="header bg-white transition-all">
@@ -193,16 +132,9 @@
             </li>
             <li class="nav-menu__item position-relative activePage">
               <a
-                href="/project"
+                href="/ecommerce-integration"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >Projects</a
-              >
-            </li>
-            <li class="nav-menu__item position-relative activePage">
-              <a
-                href="/team"
-                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >Team</a
+                >E-Store Integration</a
               >
             </li>
             <li class="nav-menu__item position-relative">
@@ -214,9 +146,9 @@
             </li>
             <li class="nav-menu__item position-relative">
               <a
-                href="/blog"
+                href="/dxpress-journal"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-                >News</a
+                >Our Journal</a
               >
             </li>
             <li class="nav-menu__item">
