--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -69,14 +69,14 @@
               <div class="">
                 <h6 class="tw-mb-4 cursor-big">Email Us</h6>
                 <a
-                  href="mailto:info@dxpress.com"
+                  href="mailto:support@dxpress.com"
                   class="text-neutral-1000 hover-text-main-600 cursor-big"
-                  >info@dxpress.com</a
+                  >support@dxpress.com</a
                 >
                 <a
-                  href="https://www.dxpress.com"
+                  href="mailto:admin@dxpress.com"
                   class="text-neutral-1000 hover-text-main-600 cursor-big"
-                  >www.dxpress.com</a
+                  >admin@dxpress.com</a
                 >
               </div>
             </div>
