--- a/views/layouts/nav-home.ejs
+++ b/views/layouts/nav-home.ejs
@@ -55,9 +55,9 @@
         </li>
         <li class="nav-menu__item position-relative">
           <a
-            href="/create-shipment"
+            href="/dxpress-journal"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
-            >Create Shipment</a
+            >Our Journal</a
           >
         </li>
         <li class="nav-menu__item position-relative">
@@ -65,6 +65,13 @@
             href="/blog"
             class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
             >News</a
+          >
+        </li>
+        <li class="nav-menu__item position-relative">
+          <a
+            href="/franchise"
+            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+            >Franchise Opportunities</a
           >
         </li>
         <li class="nav-menu__item">
@@ -192,6 +199,13 @@
                 href="/dxpress-journal"
                 class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
                 >Our Journal</a
+              >
+            </li>
+            <li class="nav-menu__item position-relative">
+              <a
+                href="/franchise"
+                class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+                >Franchise Opportunities</a
               >
             </li>
             <li class="nav-menu__item">
