--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -60,6 +60,13 @@
             >Our Journal</a
           >
         </li>
+        <li class="nav-menu__item position-relative">
+          <a
+            href="/franchise"
+            class="nav-menu__link hover--translate-y-1 text-main-two-600 tw-py-9 fw-medium w-100 tw-pe-4"
+            >Franchise Opportunities</a
+          >
+        </li>
         <li class="nav-menu__item">
           <a
             href="/contact"
